<resources>
    <string name="version">Version 2.5</string>
    <string name="what_to_do">What do you want to do?</string>
    <string name="button_capture_bc">Capture Barcode</string>
    <string name="button_capture_img">Capture Image</string>
    <string name="button_show_list">Show List</string>
    <string name="button_show_survey">Show Survey</string>
    <string name="button_save">Save</string>
    <string name="edit_text_amount">amount in ml:</string>
    <string name="edit_text_name">name:</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_del">Delete</string>
    <string name="button_img">Image</string>
    <string name="button_map">Map</string>
    <string name="crash_toast_text">Ooooops ! I crashed!</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report</string>
    <string name="crash_notif_title">BarCodeScannerWidget has crashed</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="crash_dialog_title">BarCodeScannerWidget has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data through email</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="next">next</string>
    <string-array name="survey1">
        <item>Ich brauche etwas Angenehmes, um mich besser zu fühlen.</item>
        <item>Ich fühle mich erledigt.</item>
        <item>Wenn ich im Augenblick durch etwas in Versuchung geführt würde, würde es mir sehr schwer fallen, zu widerstehen.</item>
        <item>Ich würde jede schwierige Aufgabe, die mir gestellt würde, aufgeben wollen.</item>
        <item>Ich fühle mich ausgeglichen.</item>
        <item>Ich kann keine Information mehr aufnehmen.</item>
        <item>Ich fühle mich antriebslos.</item>
        <item>Ich fühle mich wach und konzentriert.</item>
        <item>Ich möchte aufgeben.</item>
        <item>Ich fühle mich, als hätte ich keine Willenskraft mehr.</item>
    </string-array>
    <string-array name="survey2">
        <item>Seit der letzten Beantwortung: Ich hatte ein starkes Bedürfnis dazuzugehören.</item>
        <item>Zum jetzigen Zeitpunkt habe ich ein starkes Bedürfnis, dazuzugehören.</item>
    </string-array>
    <string-array name="survey3">
        <item>Zum jetzigen Zeitpunkt identifiziere ich mich/fühle ich mich verbunden mit meinen Kommilitonen/Freunden/Familie.</item>
        <item>Seit der letzten Beantwortung: Ich habe mich mit meinen Kommilitonen/Freunden/Familie identifiziert/verbunden gefühlt.</item>
    </string-array>
    <string-array name="survey4">
        <item>Sind andere Personen anwesend?</item>
        <item>Seit der letzten Beantwortung: Waren andere Personen anwesend?</item>
        <item>Trinken andere körperlich anwesende Personen Softdrinks?</item>
        <item>Seit der letzten Beantwortung: Haben körperlich anwesende Personen Softdrinks getrunken?</item>
        <item>Trinken Personen, die in einem anderen Medium (z.B. TV, Radio, Internet) anwesend waren, Softdrinks?</item>
        <item>Seit der letzten Beantwortung: Haben Personen, die in einem anderen Medium (z.B. TV, Radio, Internet) anwesend waren, Softdrinks getrunken?</item>

    </string-array>
    <string-array name="survey5">
        <item>Seit der letzten Beantwortung: Wie lang haben Sie TV und/oder Video/DVD/Blu-ray oder Videostreamingdienste (z.B. Netflix) geschaut?</item>
        <item>Seit der letzten Beantwortung: Wie lang haben Sie das Internet?
            (Bitte berücksichtigen sie nicht die Zeit, die Sie nur zum Streamen von Filmen oder Musik verwendet haben.) </item>
        <item>Seit der letzten Beantwortung: Wie lang haben Sie am Computer/an der Spielekonsole gesessen und gespielt?</item>
        <item>Seit der letzten Beantwortung: Wie lang haben Sie aktiv an einer Spielekonsole gespielt (z.B. Wii, PlayStation Move)? </item>
        <item>Seit der letzten Beantwortung: Wie lang haben Sie am Computer gesessen/gearbeitet? 
            (Bitte berücksichtigen Sie nicht die Zeit, die Sie nur zum Surfen oder Streamen von Filmen oder Musik verwendet haben.)</item>
        <item>Seit der letzten Beantwortung: Wie viel Zeit haben Sie damit verbracht, nur Kurznachrichten zu versenden?</item>
        <item>Seit der letzten Beantwortung: Wie lang haben Sie Musik nur im Radio/mit dem Handy/über einen Streamingdienst gehört? 
            (Bitte berücksichtigen Sie nicht die Zeit, während der Sie das Internet oder den Computer genutzt haben.) </item>
    </string-array>
    <string-array name="survey6left">
        <item>müde</item>
        <item>zufrieden</item>
        <item>unruhig</item>
        <item>energiegeladen</item>
        <item>unwohl</item>
        <item>entspannt</item>
    </string-array>
    <string-array name="survey6right">
        <item>wach</item>
        <item>unzufrieden</item>
        <item>ruhig</item>
        <item>energielos</item>
        <item>wohl</item>
        <item>angespannt</item>
    </string-array>
    <string name="app_name">BarCode Scanner Widget</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zxinglib_app_name">ZXingLib</string>
    <string name="zxinglib_msg_default_status">Place a barcode inside the viewfinder rectangle to scan it. </string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
</resources>