<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dip" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dip"
        android:gravity="top|center_horizontal"
        android:singleLine="false"
        android:text="@string/what_to_do" >
    </TextView>

    <Button
        android:id="@+id/main_cap_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dip"
        android:gravity="center_horizontal"
        android:text="@string/button_capture_bc" />

    <Button
        android:id="@+id/main_cap_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_cap_barcode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:gravity="center_horizontal"
        android:text="@string/button_capture_img" />

    <Button
        android:id="@+id/main_show_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_cap_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:gravity="center_horizontal"
        android:text="@string/button_show_list" />

    <Button
        android:id="@+id/main_show_survey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_show_album"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:gravity="center_horizontal"
        android:text="@string/button_show_survey" />

    <RelativeLayout
        android:id="@+id/main_logo_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ess_logo"
            android:layout_width="60dip"
            android:layout_height="20dip"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ess_logo" >
        </ImageView>

        <TextView
            android:id="@+id/version_nme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dip"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/version"
            android:textSize="12sp"
            android:layout_alignParentBottom="true" >
        </TextView>

        <ImageView
            android:id="@+id/porc_logo"
            android:layout_width="60dip"
            android:layout_height="80dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/porcupine" >
        </ImageView>

     </RelativeLayout>

</RelativeLayout>